--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "scarlet-task": "^0.1.0-comment",
     "spidex": "^2.0.5",
-    "sugar": "~1.4.1"
+    "sugar": "^1.4.1"
   },
   "devDependencies": {
+    "coveralls": "^2.11.4",
+    "istanbul": "^0.3.20",
     "mocha": "^2.3.2",
     "should": "^7.1.0"
   },
